2003-09-16  Jason Merrill  <jason@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	* c-common.c: Include input.h.
	(handle_warn_unused_result_attribute): New function.
	(c_common_attribute_table): Add warn_unused_result.
	(c_expand_expr): Issue warning when result of inlined function
	with warn_unused_result attribute is ignored.
	* calls.c (expand_call): Issue warning when result of function
	with warn_unused_result attribute is ignored.
	* c-common.h (STMT_EXPR_WARN_UNUSED_RESULT): Define.
	* expr.c: Include input.h.
	(expr_wfl_stack): Define.
	(expand_expr) <case EXPR_WITH_FILE_LOCATION>: If ignore,
	pass const0_rtx as target.  Chain locations into expr_wfl_stack.
	* tree-inline.c (expand_call_inline): Set STMT_EXPR_WARN_UNUSED_RESULT
	bit if inlined function has warn_unused_result attribute.
	* input.h (expr_wfl_stack): Declare.
	* doc/extend.texi: Document warn_unused_result attribute.
	* Makefile.in (expr.o, c-common.o): Depend on input.h.

2003-09-27  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/12340
	* loop.h (struct induction): Document the new semantics
	of the 'same' field for bivs.
	* unroll.c (biv_total_increment): Don't count the same
	biv increment several times.
	(loop_iterations) [GENERAL_INDUCT]: Likewise.

2003-09-26  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR bootstrap/12358
	* pa.c (output_bvb): Fix typo.

2003-09-24  Alexandre Oliva  <aoliva@redhat.com>

	* cpplib.c (do_pragma): Reintroduce cb_line_change call in the
	code path that calls a handler.

2003-09-23  Geoffrey Keating  <geoffk@apple.com>

	* config/t-darwin (crt2.o): Add stmp-int-hdrs to dependencies.

	* config/rs6000/rs6000.c (function_arg_pass_by_reference): Don't
	pass zero-size arrays by reference.
	(rs6000_va_arg): Likewise.

2003-09-22	Joel Sherrill <joel@oarcorp.com>

	* combine.c, config/mips/t-elf, config/c4x/rtems.h: Revert patches
	which should not have been committed with other RTEMS changes.
