@@ -1,3 +1,7 @@
+2003-10-01  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/opt/cond1.C: New test.
+
 2003-09-16  Jason Merrill  <jason@redhat.com>
 	    Jakub Jelinek  <jakub@redhat.com>
 
