@@ -1,3 +1,9 @@
+2003-07-09  Mark Mitchell  <mark@codesourcery.com>
+
+	* cp-tree.h (break_out_calls): Remove declaration.
+	* tree.c (break_out_calls): Remove.
+	* typeck.c (build_modify_expr): Avoid invalid sharing of trees.
+
 2003-09-16  Jason Merrill  <jason@redhat.com>
 	    Jakub Jelinek  <jakub@redhat.com>
 
